package br.com.luiz.locbem.model.offer;

public enum CaracteristicaVeiculo {
    AR_CONDICIONADO,
    DIRECAO_HIDRAULICA,
    CAMBIO_AUTOMATICO,
    BANCOS_DE_COURO,
    CONTROLE_CRUISE,
    SISTEMA_SOM_PREMIUM,
    SENSOR_ESTACIONAMENTO,
    TETO_SOLAR,
    GPS,
    FAROIS_XENON,
    CAMERA_RE,
    ASSISTENTE_FAIXA,
    CONTROLE_TRACAO,
    PORTA_MALAS_AUTOMATICO,
    AQUECIMENTO_BANCOS,
    VIDROS_ELETRICOS,
    SENSOR_CHUVA,
    BLUETOOTH,
    CONTROLE_VOZ,
    AIRBAGS_LATERAIS,
    CONTROLE_ESTABILIDADE,
    RECONHECIMENTO_SINAIS,
    CARREGADOR_WIRELESS,
    MONITOR_PRESSAO_PNEUS,
    ACIONAMENTO_START_STOP,
    PORTAS_AUTOMATICAS
}
