package br.com.luiz.locbem.model.offer;

public enum Combustivel {
    GASOLINA,
    ETANOL,
    DIESEL,
    GAS_NATURAL,
    ELETRICO
}
