package br.com.luiz.locbem.model.offer;

public enum EstadoVeiculo {
    NOVO,
    SEMI_NOVO,
    USADO
}
