package br.com.luiz.locbem.model.offer;

public enum TipoVeiculo {
    // Automóveis de Passeio
    SEDAN,
    HATCH,
    COUPE,
    CONVERTIVEL,

    // Veículos Utilitários
    SUV,
    CROSSOVER,
    MINIVAN,
    PICKUP,

    // Veículos Comerciais
    CAMINHAO_LEVE,
    CAMINHAO_PESADO,
    VAN,

    // Veículos de Duas Rodas
    MOTOCICLETA,
    SCOOTER,
    BICICLETA,

    // Veículos Elétricos e Híbridos
    VEICULO_ELETRICO,
    VEICULO_HIBRIDO,

    // Veículos Especiais
    VEICULO_MILITAR,
    VEICULO_DE_EMERGENCIA,
    VEICULO_INDUSTRIAL,

    // Veículos de Recreação
    MOTORHOME,
    TRAILER,
    VEICULO_AQUATICO,
    VEICULO_OFF_ROAD,

    // Outros
    TRATOR,
    AERONAVE_LEVE,
    AERONAVE
}

