___@startuml
skinparam dpi 300
skinparam pageSize A4
skinparam pageOrientation portrait
skinparam defaultFontSize 12
skinparam wrapWidth 200
skinparam maxMessageSize 200

skinparam {
    padding 10
    margin 10
    shadowing false
    handwritten false
}

class Oferta {
    -Long id
    -String modelo
    -int anoFabricacao
    -int anoModelo
    -double preco
    -String descricao
    -double quilometragem
    -double latitude
    -double longitude
}

class Usuario {
    -Long id
    -LocalDateTime dataCriacao
    -LocalDateTime ultimaModificacao
    -String nome
    -String email
    -String senha
    -String registroPessoa
    -Boolean pessoaFisica
    -String cep
    -String longitude
    -String latitude
    -Status status
}

enum TipoVeiculo {
    SEDAN, HATCH, COUPE, CONVERTIVEL, SUV, CROSSOVER, MINIVAN, PICKUP, CAMINHAO_LEVE, CAMINHAO_PESADO, VAN, MOTOCICLETA, SCOOTER, BICICLETA, VEICULO_ELETRICO, VEICULO_HIBRIDO, VEICULO_MILITAR, VEICULO_DE_EMERGENCIA, VEICULO_INDUSTRIAL, MOTORHOME, TRAILER, VEICULO_AQUATICO, VEICULO_OFF_ROAD, TRATOR, AERONAVE_LEVE, AERONAVE
}

enum EstadoVeiculo {
    NOVO, SEMI_NOVO, USADO
}

enum Combustivel {
    GASOLINA, ETANOL, DIESEL, GAS_NATURAL, ELETRICO
}

enum CaracteristicaVeiculo {
    AR_CONDICIONADO, DIRECAO_HIDRAULICA, CAMBIO_AUTOMATICO, BANCOS_DE_COURO, CONTROLE_CRUISE, SISTEMA_SOM_PREMIUM, SENSOR_ESTACIONAMENTO, TETO_SOLAR, GPS, FAROIS_XENON, CAMERA_RE, ASSISTENTE_FAIXA, CONTROLE_TRACAO, PORTA_MALAS_AUTOMATICO, AQUECIMENTO_BANCOS, VIDROS_ELETRICOS, SENSOR_CHUVA, BLUETOOTH, CONTROLE_VOZ, AIRBAGS_LATERAIS, CONTROLE_ESTABILIDADE, RECONHECIMENTO_SINAIS, CARREGADOR_WIRELESS, MONITOR_PRESSAO_PNEUS, ACIONAMENTO_START_STOP, PORTAS_AUTOMATICAS
}

enum Estado {
    ATIVO, INATIVO, EXCLUIDO
}

enum Perfil {
    USUARIO, ADMIN
}

Oferta "1" --  CaracteristicaVeiculo : caracteristica
Oferta "1" -- TipoVeiculo
Oferta "1" -- Combustivel
Oferta "1" -- EstadoVeiculo
Oferta "1" -- "0..*" Usuario : usuario
Usuario "1" -- Estado
Usuario "1" -- Perfil



@enduml
